--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "autoprefixer": "10.4.16",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.2",
+    "heroicons-react": "^1.4.1",
     "next": "14.0.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
