--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.2",
     "heroicons-react": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "next": "14.0.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
