--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "10.4.16",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.2",
     "heroicons-react": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "mongoose": "^8.0.1",
     "next": "14.0.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "tailwindcss": "3.3.5"
   },
   "devDependencies": {
