--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "10.4.16",
     "bcryptjs": "^2.4.3",
@@ -18,10 +19,12 @@
     "js-cookie": "^3.0.5",
     "mongoose": "^8.0.1",
     "next": "14.0.2",
+    "next-auth": "^4.24.5",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.5"
   },
   "devDependencies": {
